// ---------------------------------------------------------
// CONFIGURATION
// ---------------------------------------------------------

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator client {
  provider = "prisma-client-js"
}

// ---------------------------------------------------------
// ENUMS
// ---------------------------------------------------------

enum UserStatus {
  PENDING
  ACTIVE
  DISABLED
}

enum Role {
  ADMIN_PRINCIPAL
  PERSONNEL
  PARENT
}

enum FonctionPersonnel {
  ENSEIGNANT
  SURVEILLANT
  DIRECTION
  SECRETAIRE
  COMPTABLE
  ADMINISTRATIF
}

enum EnrollmentStatus {
  PENDING
  APPROVED
  REJECTED
}

enum PaymentMethod {
  ORANGE_MONEY
  MTN_MOMO
  CARTE_BANCAIRE
}

enum PaymentStatus {
  PENDING
  VALIDATED
  REJECTED
}

enum AnneeStatut {
  PREVUE
  EN_COURS
  TERMINEE
}
enum SalleEtat {
  DISPONIBLE
  EN_SERVICE
  EN_RENOVATION
  EN_CONSTRUCTION
  FERMEE_TEMPORAIREMENT
}
enum IncidentType {
  RETARD
  ABSENCE_INJUSTIFIEE
  COMPORTEMENT
  AUTRE
}
enum JourSemaine {
  LUNDI
  MARDI
  MERCREDI
  JEUDI
  VENDREDI
  SAMEDI
}

// ---------------------------------------------------------
// AUTHENTIFICATION (Table Centrale)
// ---------------------------------------------------------

model User {
  id        Int        @id @default(autoincrement())
  email     String     @unique
  password  String
  role      Role       @default(PARENT)
  status    UserStatus @default(PENDING)
  createdAt DateTime   @default(now())

  adminProfile     Admin?
  personnelProfile Personnel?
  parentProfile    Parents?

  sentMessages     Message[] @relation("SentMessages")
  receivedMessages Message[] @relation("ReceivedMessages")

  @@map("users")
}

// ---------------------------------------------------------
// PROFILS UTILISATEURS
// ---------------------------------------------------------

model Admin {
  id     Int     @id @default(autoincrement())
  nom    String  @db.VarChar(100)
  mobile String? @db.VarChar(15)
  userId Int     @unique
  user   User    @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("Admin")
}

model Personnel {
  id          Int               @id @default(autoincrement())
  nom         String
  prenom      String
  fonction    FonctionPersonnel
  telephone   String
  ville       String?
  quartier    String?
  departement String?
  photo       String?
  statut      String            @default("Actif")
  userId      Int               @unique
  user        User              @relation(fields: [userId], references: [id], onDelete: Cascade)
  classes     Classe[]
  cours       Cours[]
  salleTitulaire Salle[]  @relation("SalleTitulaire")
}

model Parents {
  id        Int      @id @default(autoincrement())
  nom       String   @db.VarChar(60)
  prenom    String   @db.VarChar(60)
  telephone String?  @db.VarChar(15)
  ville     String?
  quartier  String?
  userId    Int      @unique
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)

  enfants   Eleve[]
  demandes  EnrollmentRequest[]
  paiements  Payment[]

  @@map("Parents")
}

// ---------------------------------------------------------
// GESTION DES INSCRIPTIONS (Flux Parent -> Admin)
// ---------------------------------------------------------

model EnrollmentRequest {
  id            Int              @id @default(autoincrement())
  nom           String           @db.VarChar(60)
  prenom        String           @db.VarChar(60)
  dateNaissance DateTime         @db.Date
  lieuNaissance String           @db.VarChar(30)
  sexe          Int              @default(0)
  niveau        String           @db.VarChar(20)
  classe        String?          @db.VarChar(20)   // ex: "CP", "CE1" — souhait du parent
  photoURL      String?          // Photo de l'enfant soumise lors de l'inscription
  recuPDF       String?          // PDF du reçu de paiement (base64)
  modePaiement  String?          // "CASH" | "VIREMENT" — mode de paiement hors-ligne
  status        EnrollmentStatus @default(PENDING)
  adminNotes    String?

  parentId      Int
  parent        Parents          @relation(fields: [parentId], references: [id], onDelete: Cascade)

  createdAt     DateTime         @default(now())
  updatedAt     DateTime         @updatedAt

  @@map("EnrollmentRequest")
}

// ---------------------------------------------------------
// PÉDAGOGIE
// ---------------------------------------------------------

model Eleve {
  matricule     Int       @id @default(autoincrement()) // Changé en autoincrement pour la création auto
  nom           String    @db.VarChar(60)
  prenom        String    @db.VarChar(60)
  dateNaissance DateTime  @db.Date
  lieuNaissance String    @db.VarChar(30)
  sexe          Int       @default(0)
  langue        String    @default("Français")
  photoURL      String?
  photoAdmin    String?
  statut        String    @default("Inscrit")

  parentId      Int
  parent        Parents   @relation(fields: [parentId], references: [id],onDelete: Restrict)
  
  classroomId   Int?
  classroom     Classe?   @relation(fields: [classroomId], references: [idClasse],onDelete: SetNull)

  evaluations   Evaluation[]
  niveau           String    // ex: "SIL", "CP", "CE1"
  paiements     Payment[]  // Relation vers les paiements effectués par le parent pour cet élève
  
  salleId        Int?
  salle          Salle?     @relation(fields: [salleId], references: [idSalle], onDelete: SetNull)
  notes          Note[]
  incidents      Incident[]
  soldePoints    Int        @default(20) // Pour la discipline
  frequences     Frequente[]
  @@map("Eleve")
}

model Classe {
  idClasse      Int             @id @default(autoincrement())
  libelle       String          @db.VarChar(100)
  idCycle       Int
  cycle         Cycle           @relation(fields: [idCycle], references: [idCycle],onDelete: Restrict)
  responsableId Int?
  responsable   Personnel?      @relation(fields: [responsableId], references: [id],onDelete: SetNull)
  students      Eleve[]
  salles        Salle[]
  cours         Cours[]
  epreuves      Epreuve[]
  frequences    Frequente[]
  matieres      MatiereClasse[]
  scolarite     Scolarite?

  @@map("Classe")
}

model Salle {
  idSalle                Int         @id @default(autoincrement())
  libelle                String      @db.VarChar(30)
  position               String?
  capacite               Int?
  idClasse               Int?
  etat                   SalleEtat   @default(DISPONIBLE)
  actif                  Boolean     @default(true)
  enseignantTitulaireId  Int?
  classe                 Classe?     @relation(fields: [idClasse], references: [idClasse], onDelete: SetNull)
  titulaire              Personnel?  @relation("SalleTitulaire", fields: [enseignantTitulaireId], references: [id], onDelete: SetNull)
  eleves                 Eleve[]
  cours                  Cours[]
  plannings              EmploiDuTemps[]

  @@map("Salle")
}

model Cycle {
  idCycle     Int      @id @default(autoincrement())
  libelle     String   @db.VarChar(255)
  description String?  @db.Text
  classes     Classe[]

  @@map("Cycle")
}

// ---------------------------------------------------------
// NOTES ET COURS
// ---------------------------------------------------------

model Cours {
  idCours      Int       @id @default(autoincrement())
  idMatiere    Int
  matiere      Matiere   @relation(fields: [idMatiere], references: [id],onDelete: Restrict)
  
  coefficient  Float     @default(1.0)
  idClasse     Int?
  classe       Classe?   @relation(fields: [idClasse], references: [idClasse],onDelete: Cascade)
  idSalle      Int?
  salle        Salle?    @relation(fields: [idSalle], references: [idSalle], onDelete: SetNull)
  enseignantId Int?
  enseignant   Personnel? @relation(fields: [enseignantId], references: [id],onDelete: SetNull)
  evaluations  Evaluation[]
  plannings    EmploiDuTemps[]

  @@map("Cours")
}

model Note {
  id          Int      @id @default(autoincrement())
  valeur      Float
  evaluation  String
  idMatiere       Int
  matiere         Matiere  @relation(fields: [idMatiere], references: [id],onDelete: Restrict)
  eleveId     Int
  eleve       Eleve    @relation(fields: [eleveId], references: [matricule],onDelete: Cascade)
  dateSaisie  DateTime @default(now())
}

model Incident {
  id            Int          @id @default(autoincrement())
  type          IncidentType
  date          DateTime     @default(now())
  gravite       String       // Faible, Moyenne, Haute
  pointsDeduits Int          @default(0)
  commentaire   String
  auteur        String       // Nom de l'enseignant/surveillant
  eleveId       Int
  eleve         Eleve        @relation(fields: [eleveId], references: [matricule],onDelete: Cascade)
  status        String       @default("APPROVED") // APPROVED | PENDING | REJECTED
}

// Catalogue d'infractions paramétrable par l'admin
model TypeInfraction {
  id           Int     @id @default(autoincrement())
  libelle      String  @unique  // ex: "Retard", "Insulte", "Bagarre"
  gravite      String  // "Faible", "Moyenne", "Grave", "Très Grave"
  pointsMalus  Int     @default(0)

  @@map("TypeInfraction")
}

model Evaluation {
  idEval       Int      @id @default(autoincrement())
  note         Float
  appreciation String?
  matricule    Int
  eleve        Eleve    @relation(fields: [matricule], references: [matricule],onDelete: Cascade)
  idCours      Int
  cours        Cours    @relation(fields: [idCours], references: [idCours],onDelete: Cascade)
  createdAt    DateTime @default(now())

  @@map("Evaluation")
}



model Scolarite {
  id                Int       @id @default(autoincrement())
  montantInscription Float
  montantPension    Float
  nombreTranches    Int
  classeId          Int       @unique
  classe            Classe    @relation(fields: [classeId], references: [idClasse], onDelete: Cascade)
  tranches          Tranche[]

  @@map("Scolarite")
}

model Tranche {
  id          Int       @id @default(autoincrement())
  libelle     String
  montant     Float
  dateLimite  DateTime  @db.Date
  scolariteId Int
  scolarite   Scolarite @relation(fields: [scolariteId], references: [id], onDelete: Cascade)

  @@map("Tranche")
}

model FeeConfig {
  id            Int      @id @default(autoincrement())
  niveau        String   @unique // ex: "CP1", "CE1"
  montantTotal  Float    // Le prix total de l'année
  montantTranche Float   // Prix d'une tranche (ex: Total / 3)
  
  // Relation optionnelle : on pourrait lier cela à la table Classe plus tard
}

model ProcedureInscription {
  id      Int    @id @default(autoincrement())
  contenu String // Contenu HTML de la procédure d'inscription

  @@map("ProcedureInscription")
}

model Payment {
  id              Int           @id @default(autoincrement())
  montant         Float
  nombreTranches  Int           // Combien de tranches le parent paie
  methode         PaymentMethod
  recuPDF         String?       // PDF du reçu de paiement (base64)
  modePaiement    String?       // "CASH" | "VIREMENT" — mode de paiement hors-ligne
  transactionRef  String?       // ID reçu d'Orange/MTN
  status          PaymentStatus @default(PENDING)
  adminNotes      String?
  
  // Relations
  eleveId         Int
  eleve           Eleve         @relation(fields: [eleveId], references: [matricule],onDelete: Cascade)
  
  parentId        Int
  parent          Parents       @relation(fields: [parentId], references: [id],onDelete: Cascade)

  createdAt       DateTime      @default(now())
  updatedAt       DateTime      @updatedAt

  @@map("Payment")
}

// --- BIBLIOTHÈQUE ---
model Livre {
  id              Int     @id @default(autoincrement())
  titre           String
  auteur          String
  maisonEdition   String?
  description     String?
  cycle           String
  classeConcernee String
  langue          String
  couvertureUrl   String?
  pdfUrl          String?
  idMatiere       Int
  matiere         Matiere  @relation(fields: [idMatiere], references: [id],onDelete: Restrict)
}



// --- EMPLOI DU TEMPS ---
model Matiere {
  id        Int      @id @default(autoincrement())
  nom       String   @unique
  code      String?
  classes   MatiereClasse[]
  cours     Cours[]
  livres    Livre[]
  notes     Note[]
  epreuves  Epreuve[]
}

model MatiereClasse {
  idMatiere Int
  matiere   Matiere  @relation(fields: [idMatiere], references: [id])
  idClasse  Int
  classe    Classe   @relation(fields: [idClasse], references: [idClasse])

  @@id([idMatiere, idClasse])
  @@map("MatiereClasse")
}

model EmploiDuTemps {
  id           Int          @id @default(autoincrement())
  jour         JourSemaine
  heureDebut   String       // ex: "08:00"
  heureFin     String       // ex: "10:00"
  
  idCours      Int
  cours        Cours        @relation(fields: [idCours], references: [idCours],onDelete: Cascade)
  
  idSalle      Int
  salle        Salle        @relation(fields: [idSalle], references: [idSalle],onDelete: Cascade)

  @@index([idCours])
  @@index([idSalle])
}
model Epreuve {
  id          Int      @id @default(autoincrement())
  evaluation  String   // ex: "Trimestre 1", "Examen Final"
  anneeAcad   String   // ex: "2024-2025"
  auteur      String   // Nom de l'enseignant
  sujetUrl    String?  // Lien vers le fichier sujet
  corrigeUrl  String?  // Lien vers le corrigé

  // Relations
  idMatiere   Int
  matiere     Matiere  @relation(fields: [idMatiere], references: [id], onDelete: Restrict)
  
  idClasse    Int
  classe      Classe   @relation(fields: [idClasse], references: [idClasse], onDelete: Cascade)

  createdAt   DateTime @default(now())

  @@map("Epreuve")
}

// ---------------------------------------------------------
// MESSAGERIE INTERNE
// ---------------------------------------------------------

model Message {
  id          Int       @id @default(autoincrement())
  content     String
  type        String    // "ANNOUNCEMENT" ou "PERSONAL"
  status      String    @default("SENT") // "SENT" (admin), "PENDING"/"APPROVED"/"REJECTED" (enseignant)
  senderId    Int
  recipientId Int?
  sender      User      @relation("SentMessages", fields: [senderId], references: [id], onDelete: Cascade)
  recipient   User?     @relation("ReceivedMessages", fields: [recipientId], references: [id], onDelete: SetNull)
  createdAt   DateTime  @default(now())

  @@map("Message")
}

// ---------------------------------------------------------
// ANNÉES ACADÉMIQUES
// ---------------------------------------------------------

model AnneeAcademique {
  idAcademi  Int          @id @default(autoincrement())
  libelle    String       @unique // ex: "2024-2025"
  dateDebut  DateTime     @db.Date
  dateFin    DateTime     @db.Date
  active     Boolean      @default(false)
  statut     AnneeStatut  @default(PREVUE)

  trimestres Trimestre[]
  frequences Frequente[]

  @@map("AnneeAcademique")
}

model Trimestre {
  idTrimestre Int          @id @default(autoincrement())
  libelle     String       // ex: "Trimestre 1"
  dateDebut   DateTime?    @db.Date
  dateFin     DateTime?    @db.Date
  idAcademi   Int
  annee       AnneeAcademique @relation(fields: [idAcademi], references: [idAcademi], onDelete: Cascade)

  sessions    Session[]

  @@map("Trimestre")
}

model Session {
  idSession   Int       @id @default(autoincrement())
  libelle     String    // ex: "Session 1 - Devoirs"
  dateDebut   DateTime? @db.Date
  dateFin     DateTime? @db.Date
  idTrimestre Int
  trimestre   Trimestre @relation(fields: [idTrimestre], references: [idTrimestre], onDelete: Cascade)

  @@map("Session")
}

// ---------------------------------------------------------
// FRÉQUENTATION (Affectation élève → classe par année)
// ---------------------------------------------------------

model Frequente {
  idFrequente Int             @id @default(autoincrement())
  idEleve     Int
  idSalle     Int             // id de la classe (Classe.idClasse)
  idAcademi   Int

  eleve       Eleve           @relation(fields: [idEleve], references: [matricule], onDelete: Cascade)
  classe      Classe          @relation(fields: [idSalle], references: [idClasse], onDelete: Restrict)
  annee       AnneeAcademique @relation(fields: [idAcademi], references: [idAcademi], onDelete: Restrict)

  @@unique([idEleve, idSalle, idAcademi])
  @@map("Frequente")
}

